# product-service_lab2

./: Cargo.toml  main.py  pyproject.toml
.github/workflows/: main_product-service-app.yml
